# SCToolbox-with-python

./: README.md
Numerical_integration/: build.sh
Numerical_integration/include/: approximator.hpp  midpoint_approximator.hpp  simpson_approximator.hpp  trapezoidal_approximator.hpp
Numerical_integration/python/: CMakeLists.txt  approximator_py.cpp  main.py
Numerical_integration/src/: approximator.cpp  main.cpp  midpoint_approximator.cpp  simpson_approximator.cpp  trapezoidal_approximator.cpp
Statistics/: build.sh
Statistics/csv/: df_surf.csv
Statistics/include/: statistics.hpp
Statistics/python/: CMakeLists.txt  main.py  statistics.py  statistics_py.cpp
Statistics/src/: main.cpp  statistics.cpp
